--- a/package.json
+++ b/package.json
@@ -4,25 +4,28 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node .",
+    "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "pg": "^8.3.3"
+    "pg": "^8.3.3",
+    "tslint": "^6.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.1",
+    "axios": "^0.20.0",
+    "cors": "^2.8.5",
+    "helmet": "^4.1.1",
     "postgresql": "0.0.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.0.3"
+    "router": "^1.3.5",
+    "typescript": "^4.0.3",
+    "ws": "^7.3.1"
   }
 }
