--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 PGHOST=localhost
-PGUSER=development
-PGDATABASE=scheduler_development
-PGPASSWORD=development
+PGUSER=finaler
+PGDATABASE=finalproject
+PGPASSWORD=finaler
 PGPORT=5432
