add login route and testing cookies

--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie": "^0.4.1",
+    "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "nodemon": "^2.0.4",
     "pg": "^8.3.3",
     "tslint": "^6.1.3"
