--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "helmet": "^4.1.1",
     "postgresql": "0.0.1",
+    "react-tag-autocomplete": "^6.1.0",
     "router": "^1.3.5",
     "typescript": "^4.0.3",
     "ws": "^7.3.1"
