--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "js-cookie": "^2.2.1",
     "nodemon": "^2.0.4",
     "pg": "^8.3.3",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "websocket": "^1.0.32"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
