--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "nodemon": "^2.0.4",
     "pg": "^8.3.3",
     "tslint": "^6.1.3",
-    "ws": "^7.3.1"
+    "ws": "^7.3.1",
+    "cors": "^2.8.5",
+    "helmet": "^4.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
