--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "tslint": "^6.1.3",
     "ws": "^7.3.1",
     "cors": "^2.8.5",
-    "helmet": "^4.1.1"
+    "helmet": "^4.1.1",
     "websocket": "^1.0.32"
   },
   "devDependencies": {
