--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
     "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
-    "express": "^4.17.1",
     "js-cookie": "^2.2.1",
     "nodemon": "^2.0.4",
     "pg": "^8.3.3",
     "tslint": "^6.1.3",
     "ws": "^7.3.1",
-    "cors": "^2.8.5",
     "helmet": "^4.1.1",
     "websocket": "^1.0.32"
   },
@@ -31,11 +29,17 @@
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.1",
     "axios": "^0.20.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "helmet": "^4.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.2.5",
     "postgresql": "0.0.1",
     "react-tag-autocomplete": "^6.1.0",
     "router": "^1.3.5",
+    "sequelize": "^6.3.5",
     "typescript": "^4.0.3",
     "ws": "^7.3.1"
   },
