--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "reset": "psql -U finaler -d finalproject < ./src/db/schema/create.sql && psql -U finaler -d finalproject < ./src/db/schema/development.sql"
+    "reset": "psql -U sprinter -d sprint < ./src/db/schema/create.sql && psql -U sprinter -d sprint < ./src/db/schema/development.sql"
   },
   "keywords": [],
   "author": "",
