databse adjusted for skills, first and last names

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 PGHOST=localhost
-PGUSER=finaler
-PGDATABASE=finalproject
-PGPASSWORD=finaler
+PGUSER=sprinter
+PGDATABASE=sprint
+PGPASSWORD=sprinter
 PGPORT=5432
