--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "license": "ISC",
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test:server": "NODE_ENV=test npm start",
-    "reset": "psql -U sprinter -d sprint < ./src/db/schema/create.sql && psql -U sprinter -d sprint < ./src/db/schema/development.sql"
+    "test:server": "NODE_ENV=test npm start"
   },
   "dependencies": {
     "cookie": "^0.4.1",
