--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test:server": "NODE_ENV=test npm start"
+    "test:server": "NODE_ENV=test npm start",
+    "reset": "psql -U sprinter -d sprint < ./src/db/schema/create.sql && psql -U sprinter -d sprint < ./src/db/schema/development.sql"
   },
   "dependencies": {
     "cookie": "^0.4.1",
@@ -22,25 +23,23 @@
     "tslint": "^6.1.3",
     "ws": "^7.3.1",
     "helmet": "^4.1.1",
-    "websocket": "^1.0.32"
+    "websocket": "^1.0.32",
+    "axios": "^0.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.2.5",
+    "postgresql": "0.0.1",
+    "body-parser": "^1.19.0",
+    "react-tag-autocomplete": "^6.1.0",
+    "bcryptjs": "^2.4.3",
+    "router": "^1.3.5",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.11.1",
-    "axios": "^0.20.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "helmet": "^4.1.1",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.2.5",
-    "postgresql": "0.0.1",
-    "react-tag-autocomplete": "^6.1.0",
-    "router": "^1.3.5",
-    "sequelize": "^6.3.5",
-    "typescript": "^4.0.3",
-    "ws": "^7.3.1"
+    "typescript": "^4.0.3"
   },
   "proxy": "http://localhost:8080"
 }
