--- a/package.json
+++ b/package.json
@@ -11,29 +11,30 @@
     "reset": "psql -U sprinter -d sprint < ./src/db/schema/create.sql && psql -U sprinter -d sprint < ./src/db/schema/development.sql"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
-    "js-cookie": "^2.2.1",
-    "nodemon": "^2.0.4",
-    "pg": "^8.3.3",
-    "tslint": "^6.1.3",
-    "ws": "^7.3.1",
-    "helmet": "^4.1.1",
-    "websocket": "^1.0.32",
-    "axios": "^0.20.0",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.4",
+    "path": "^0.12.7",
+    "pg": "^8.3.3",
     "postgresql": "0.0.1",
-    "body-parser": "^1.19.0",
     "react-tag-autocomplete": "^6.1.0",
-    "bcryptjs": "^2.4.3",
     "router": "^1.3.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "tslint": "^6.1.3",
+    "websocket": "^1.0.32",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
