--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
+    "http-proxy-middleware": "^1.0.6",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
