--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.1",
     "helmet": "^4.1.1",
     "http-proxy-middleware": "^1.0.6",
     "js-cookie": "^2.2.1",
