--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "reset": "psql -U sprinter -d sprint < ./src/db/schema/create.sql && psql -U sprinter -d sprint < ./src/db/schema/development.sql",
     "test": "react-scripts test"
   },
+  "engines": {
+    "node": "19.6.1"
+  },
   "dependencies": {
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
